--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <li><a href="#">Mammillaria</a>
                     <ul>
                         <li><a href="link/mammillariaindex.html">Accueil</a></li>
-                        <li><a href="link/mammillariaindex.html#elongata">Mammillaria elongata</a></li>
+                        <li><a href="link/mammillariaindex.html#elongata">Mammillaria elongata anguinea</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Monstera</a>
@@ -276,14 +276,15 @@
                 <button class="js-modal modal-btn modal-author"><a href="modal.html#modal-author">À propos de l'auteur</a></button>
         </section>
         <section class="section-btn-nav-header">
+                <!--
                 <button class="btn-nav-header nav-watering"><a href="link/wateringindex.html" alt="En savoir plus sur mes arrosages" title="En savoir plus sur mes arrosages" >Arrosages </a></button>
                 <button class="btn-nav-header nav-cutting"><a href="link/cuttingindex.html" alt="En savoir plus sur mes bouturages" title="En savoir plus sur mes bouturages" >Bouturages</a></button>
                 <button class="btn-nav-header nav-vermin"><a href="link/verminindex.html" alt="En savoir plus sur mes observations de parasites" title="En savoir plus sur mes observations de parasites">Parasites </a></button>
                 <button class="btn-nav-header nav-repotting"><a href="link/repottingindex.html" alt="En savoir plus sur mes rempotages" title="En savoir plus sur mes rempotages">Rempotages</a></button>
+                -->
                 <button class="btn-nav-header nav-install-tillandsia"><a href="link/installtillandsia.html" alt="Comment j'accroche mes Tillandsia" title="Comment j'accroche mes Tillandsia" >Accrochage Tillandsia</a></button>
         </section>
 </footer>
-
 </header>
         <hr><hr>
 <main>                                                  <!-- CATÉGORIES DE PLANTES -->
