--- a/link/othercactusgallery.html
+++ b/link/othercactusgallery.html
@@ -18,7 +18,8 @@
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes autres Cactus</h1>
             </div>
                 <h2 class="sub-title-gallery-category">Végétaux présents ici:
-                    <a href="#myriostigma">Astrophytum myriostigma,</a>  
+                    <a href="#myriostigma">Astrophytum myriostigma,</a>   
+                    <a href="#cornifera">Coryphanta cornifera,</a>   
                     <a href="#grusonii">Echinocactus grusonii,</a>
                     <a href="#multicostatus">Echinofossulocactus multicostatus,</a>
                     <a href="#subdenudata">Echinopsis subdenudata,</a>
@@ -39,6 +40,19 @@
         <img class="flex" src="../assets/img/othercactus/gallery/astrophytummyriostigma(1).jpg" alt="Astrophytum myriostigma" title="Astrophytum myriostigma"/>
         <img class="flex" src="../assets/img/othercactus/gallery/astrophytummyriostigma(2).jpg" alt="Astrophytum myriostigma" title="Astrophytum myriostigma"/>
         <img class="flex" src="../assets/img/othercactus/gallery/astrophytummyriostigma(3).jpg" alt="Astrophytum myriostigma" title="Astrophytum myriostigma"/>
+    </section>
+    <hr>
+            <div class="species-title-gallery-category" id="cornifera">Coryphanta cornifera
+                <a href="othercactusindex.html#cornifera">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- CORYPHANTA CORNIFERA -->
+        <img class="flex" src="../assets/img/othercactus/gallery/coryphantacornifera(1).jpg" alt="Coryphanta cornifera" title="Coryphanta cornifera"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/coryphantacornifera(2).jpg" alt="Coryphanta cornifera" title="Coryphanta cornifera"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/coryphantacornifera(3).jpg" alt="Coryphanta cornifera" title="Coryphanta cornifera"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/coryphantacornifera(4).jpg" alt="Coryphanta cornifera" title="Coryphanta cornifera"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/coryphantacornifera(5).jpg" alt="Coryphanta cornifera" title="Coryphanta cornifera"/>
+        <img class="flex" src="../assets/img/othercactus/gallery/coryphantacornifera(6).jpg" alt="Coryphanta cornifera" title="Coryphanta cornifera"/>
     </section>
             <hr>
             <div class="species-title-gallery-category" id="espostoa">Espostoa
