--- a/link/othercactusindex.html
+++ b/link/othercactusindex.html
@@ -19,6 +19,7 @@
             </div>
                 <h2 class="sub-title-index-category">Végétaux présents ici: 
                     <a href="#myriostigma">Astrophytum myriostigma,</a>  
+                    <a href="#cornifera">Coryphanta cornifera,</a>  
                     <a href="#grusonii">Echinocactus grusonii,</a>
                     <a href="#multicostatus">Echinofossulocactus multicostatus,</a>
                     <a href="#subdenudata">Echinopsis subdenudata,</a>
@@ -51,7 +52,31 @@
             </div>
             <div class="index-category-tab-content" id="myriostigma5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois sauf si je remarque qu'ils comencent à se fripper.
             </div>
-            <div class="index-category-tab-content" id="myriostigma6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en plastique carré pas trop grand car pour pouvoir mettre plusieurs pots les uns contre les autres.
+            <div class="index-category-tab-content" id="myriostigma6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en plastique carré pas trop grand pour pouvoir mettre plusieurs pots les uns contre les autres.
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- CORYPHANTA CORNIFERA -->
+            <nav-tabs class="index-category-nav-tabs" id="cornifera">
+                <a href="#cornifera1" aria-selected="true">Nom</a>
+                <a href="#cornifera2">Exposition en été</a>
+                <a href="#cornifera3">Exposition en hiver</a>
+                <a href="#cornifera4">Arrosage en été</a>
+                <a href="#cornifera5">Arrosage en hiver</a>
+                <a href="#cornifera6">Rempotage</a>
+            </nav-tabs>   
+            <div class="index-category-tab-content" id="cornifera1"><span class="species">Coryphanta cornifera<a href="othercactusgallery.html#cornifera">Voir la galerie photo</a></span>
+                    <img class="flex2" src="../assets/img/othercactus/index/coryphantacornifera.jpg" alt="Coryphanta cornifera" title="Coryphanta cornifera"/>
+            </div>   
+            <div class="index-category-tab-content" id="cornifera2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai ou début Juin jusque courant Octobre en plein soleil direct toute la journée.<br/>Doit avoir été acclimaté avant de rester en plein soleil.
+            </div>
+            <div class="index-category-tab-content" id="cornifera3" hidden="hidden">Je le laisse en intérieur dans un endroit très lumineux recevant le soleil direct contre une fenêtre ou la température ne descendra jamais sous les 10°C.
+            </div>
+            <div class="index-category-tab-content" id="cornifera4" hidden="hidden">Je ne l'arrose que très peu durant de longues périodes chaudes sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+            </div>
+            <div class="index-category-tab-content" id="cornifera5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois sauf si je remarque qu'ils comencent à se fripper.
+            </div>
+            <div class="index-category-tab-content" id="cornifera6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut de graviers de Jura surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je les garde dans un pot en terre-cuite pas trop grand.
+                <a class="species-repotting-info" href="repottingcoryphantacornifera.html" alt="Rempotage Coryphanta cornifera" title="Rempotage Coryphanta cornifera">Voir comment je rempote mes Coryphanta cornifera</a>
         </section>
         <hr>
         <section class="index-category-system-tabs">                            <!-- ECHINOCACTUS GRUSONII -->
