--- a/link/othersuspendedindex.html
+++ b/link/othersuspendedindex.html
@@ -34,15 +34,16 @@
             <div class="index-category-tab-content" id="marmoratus1"><span class="species">Aeschynanthus marmoratus<a href="othersuspendedgallery.html#marmoratus">Voir la galerie photo</a></span>
                     <img src="../assets/img/othersuspended/index/aeschynanthusmarmoratus.jpg" alt="Aeschynanthus marmoratus" title="Aeschynanthus marmoratus"/>
             </div>   
-            <div class="index-category-tab-content" id="marmoratus2" hidden="hidden">Je le place dehors là ou il aura une bonne luminosité avec assez peu de soleil direct hormis un peu celui du matin ou du soir à partir de la deuxième quinzaine de Mai ou début Juin jusque courant Octobre. <br/>Je le rentre les nuits ou la température doit passer sous les 15°C.
+            <div class="index-category-tab-content" id="marmoratus2" hidden="hidden">Je le place dehors là ou il aura une bonne luminosité avec assez peu de soleil direct hormis un peu celui du matin ou du soir à partir de la deuxième quinzaine de Mai ou début Juin jusque courant Octobre.<br/>Je le rentre les nuits ou la température doit passer sous les 15°C.
             </div>
-            <div class="index-category-tab-content" id="marmoratus3" hidden="hidden">Je le place ou il aura une bonne luminosité pas trop loin d'une fenêtre dans une pièce ou la température ne descendra pas sous les 18°C. <br/>Je fais moins attention au soleil car celui d'hiver est sans danger
+            <div class="index-category-tab-content" id="marmoratus3" hidden="hidden">Je le place ou il aura une bonne luminosité pas trop loin d'une fenêtre dans une pièce ou la température ne descendra pas sous les 18°C.<br/>Je fais moins attention au soleil car celui d'hiver est sans danger
             </div>
-            <div class="index-category-tab-content" id="marmoratus4" hidden="hidden">Je l'arrose de manière régulière afin que le substrat ne sèche pas trop. <br/> Soit par bassinage lorsque celà est possible ou de manière abondante.
+            <div class="index-category-tab-content" id="marmoratus4" hidden="hidden">Je l'arrose de manière régulière afin que le substrat ne sèche pas trop.<br/> Soit par bassinage lorsque celà est possible ou de manière abondante.
             </div>
             <div class="index-category-tab-content" id="marmoratus5" hidden="hidden">Je l'arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
             </div>
-            <div class="index-category-tab-content" id="marmoratus6" hidden="hidden">J'utilise un terreau normal pour plantes d'intérieur ou universel que je mélange avec du sable de rivière. <br/>Je le trouve très bien dans un pot en plastique suspendu.
+            <div class="index-category-tab-content" id="marmoratus6" hidden="hidden">J'utilise un terreau normal pour plantes d'intérieur ou universel que je mélange avec du sable de rivière.<br/>Je la trouve très bien dans un pot en plastique suspendu.
+                <a class="species-repotting-info" href="repottingaeschynanthusmarmoratus.html" alt="Rempotage Aeschynanthus marmoratus" title="Rempotage Aeschynanthus marmoratus">Voir comment je rempote mon Aeschynanthus marmoratus</a>
             </div>
         </section>
         <hr>
