--- a/link/repottingopuntiamonacanthamonstruosisvariegata.html
+++ b/link/repottingopuntiamonacanthamonstruosisvariegata.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="../assets/css/stylesrepottingspecies.css">
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
-    <title>Rempotage Lithops</title>
+    <title>Rempotage Opuntia monacantha monstruosis variegata</title>
 </head>
-<body onload="prot()" id="repotting-lithops">
+<body onload="prot()" id="repotting-opuntiamonacanthamonstruosisvariegata">
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
-            <div><h1 class="title-species-repotting-desc" id="top">Rempotage Lithops</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mes Lithops en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
+            <div><h1 class="title-species-repotting-desc" id="top">Rempotage Opuntia monacantha monstruosis variegata</h1>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Opuntia monacantha monstruosis variegata en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
         </section>  
                 <section class="nav-button">
-                    <button class="styled-btn-index"><a href="othersucculentsindex.html#lithops">Fiche info de mes Lithops</a></button>
-                    <button class="styled-btn-gallery"><a href="othersucculentsgallery.html#lithops">Galerie photos de mes Lithops</a></button>
+                    <button class="styled-btn-index"><a href="othersucculentsindex.html#opuntiamonacanthamonstruosisvariegata">Fiche info de mon Opuntia monacantha monstruosis variegata</a></button>
+                    <button class="styled-btn-gallery"><a href="othersucculentsgallery.html#opuntiamonacanthamonstruosisvariegata.html">Galerie photos de mon Opuntia monacantha monstruosis variegata</a></button>
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
@@ -74,101 +74,81 @@
     </section>
     <section class="species-repotting-step">                                    <!-- AVANT REMPOTTAGE -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(1).jpg" alt="avant rempottage" title="avant rempottage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(1).jpg" alt="avant rempottage" title="avant rempottage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, ce sont mes Lithops après les avoir achetés. Ils sont bien gonflés, aucune floraison en approche ou en court donc ils vont pouvoir passer au rempotage afin d'avoir un meilleur substrat.
+                Ici, c'est mon Opuntia monacantha monstruosis variegata avant son rempotage. Il va avoir un pot plus grand et en terre-cuite avec un nouveau substrat et un surfaçage de graviers de Jura.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- SORTIS DES POTS -->
+    <section class="species-repotting-step">                                    <!-- COMPARAISON POTS -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(2).jpg" alt="sortis des pots" title="sortis des pots"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(2).jpg" alt="comparaison pots" title="comparaison pots"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-               Ici, les Lithops sont retirés de leurs pots et séparés. Avant de les placer dans le nouveau pot, je ferai délicatement tomber encore une partie du substrat se trouvant sur leurs racines. 
+                Ici, une comparaison de son actuel pot face à son prochain, il sera mieux et aura plus de place. On voit également qu'il commençait à faire la tronche et demandait un rempottage.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- PRÉPARATION POT -->
+    <section class="species-repotting-step">                                    <!-- REMPLISSAGE POT -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(3).jpg" alt="préparation pot" title="préparation pot"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(3).jpg" alt="remplissage pot" title="remplissage pot"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-               Ici, préparation du nouveau pot que je remplis à environ 3 cm du haut avec mon substrat mélangé précédemment. 
+                Ici, je remplis partiellement le nouveau pot afin de n'avoir juste qu'à poser le cactus dedans une fois dépoté.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- REMPLISSAGE SABLE -->
+    <section class="species-repotting-step">                                    <!-- SYSTÈME RACINAIRE -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(4).jpg" alt="remplissage sable" title="remplissage sable"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(4).jpg" alt="système racinaire" title="système racinaire"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, je remplis jusqu'en haut du pot avec du sable de rivière que j'essaie de tasser correctement. J'y ferai des trous de la taille de chaque Lithops avant de les placer 1 par 1.
+                Ici, il est dépoté et j'ai retiré une grosse partie du substrat et quelques vieilles racines abîmées durant le démottage. On voit bien son système racinaire qui est en pleine forme.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- TASSEMENT SABLE -->
+    <section class="species-repotting-step">                                    <!-- MAINTIEN -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(5).jpg" alt="tassement sable" title="tassement sable"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(5).jpg" alt="maintien" title="maintien"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, avec le bout d'un marqueur je tasse délicatement le sable autour de chaque Lithops en tapotant un peu partout et en rajoutant du sable si nécessaire.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- TASSEMENT FINI -->
-        <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(6).jpg" alt="tassement fini" title="tassement fini"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, le sable est tassé correctement presque partout et les Lithops dépassent de la surface du sable. De cette manière, les racines iront dans le substrat et pourront y boire sans que la plante elle même ne soit dans de la terre humide.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- AJOUT JURA -->
-        <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(7).jpg" alt="ajout jura" title="ajout jura"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, j'ai rajouté les graviers Jura de manière à ce que chaque Lithops tienne correctement. Le sable pas trop tassé contre les plantes se tassera naturellement sous la pluie.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- DIFFÉRENTES HAUTEURS -->
-        <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(8).jpg" alt="différentes hauteurs" title="différentes hauteurs"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, on voit que les Lithops ne sont pas tous à la même hauteur, celà est fait exprès pour donner du relief que j'aime bien.
+                Pareil ici, système racinaire en forme. On voit également qu'il est aisé de le tenir par le bas sans se piquer. On voit un peu plus haut que mon pouce un petit morceau sec tirant vers le bas qui sera retiré par la suite.
             </p>
         </div>
     </section>
     <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(9).jpg" alt="rempottage fini" title="rempottage fini"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(6).jpg" alt="rempottage fini" title="rempottage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le rempottage est fini et ils partent dans un prochain bac avant de vivre dehors.
+                Ici, le rempottage est fini et j'ai également rajouté ses petites boutures de morceaux aniennement cassés.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- DANS AUTRE BAC -->
+    <section class="species-repotting-step">                                    <!-- NETTOYAGE BRANCHES -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(10).jpg" alt="dans autre bac" title="dans autre bac"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(7).jpg" alt="Nettoyage branches" title="Nettoyage branches"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, j'ai placé le pot dans un bac en terre-cuite carré lui-même troué et rempli de sable ainsi, il absorbera la chaleur du soleil et l'épaisseur de sable empêchera que le bac des Lithops ne soit trop chaud et les plantes garderont les pieds au frais.
+                Ici, je viens de retirer des petits morceaux secs et morts qui traînaient dessus comme par exemple celui se trouvant sur une photo plus tôt.
+            </p>
+        </div>
+    </section>
+    <section class="species-repotting-step">                                    <!-- GRAVIERS JURA ET FIN -->
+        <div class="species-repotting-img">
+            <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(8).jpg" alt="graviers jura et fin" title="graviers jura et fin"/>
+        </div>
+        <div class="species-repotting-expl">
+            <p>
+                Ici, je viens d'effectuer le surfaçage de graviers de Jura et maintenant, le rempottage est complètement fini.
             </p>
         </div>
     </section>
