--- a/link/mammillariagallery.html
+++ b/link/mammillariagallery.html
@@ -18,7 +18,7 @@
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Mammillaria</h1>
             </div>
                 <h2 class="sub-title-gallery-category">Végétaux présents ici:
-                    <a href="#elongata"> elongata.</a> 
+                    <a href="#elongata"> elongata anguinea.</a> 
                 </h2>        
     </header>
             <hr>
@@ -26,11 +26,11 @@
                 <a href="mammillariaindex.html#elongata">Voir la fiche info</a>
             </div>
             <hr>
-    <section>                                                                   <!-- ELONGATA -->
-        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(1).jpg" alt=" elongata" title=" elongata"/>
-        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(2).jpg" alt=" elongata" title=" elongata"/>
-        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(3).jpg" alt=" elongata" title=" elongata"/>
-        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(4).jpg" alt=" elongata" title=" elongata"/>
+    <section>                                                                   <!-- ELONGATA ANGUINEA-->
+        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(1).jpg" alt="elongata anguinea" title="elongata anguinea"/>
+        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(2).jpg" alt="elongata anguinea" title="elongata anguinea"/>
+        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(3).jpg" alt="elongata anguinea" title="elongata anguinea"/>
+        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(4).jpg" alt="elongata anguinea" title="elongata anguinea"/>
     </section>
 </main>
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
