--- a/link/repottingcoryphantacornifera.html
+++ b/link/repottingcoryphantacornifera.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="../assets/css/stylesrepottingspecies.css">
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
-    <title>Rempotage Lithops</title>
+    <title>Rempotage Coryphanta cornifera</title>
 </head>
-<body onload="prot()" id="repotting-lithops">
+<body onload="prot()" id="repotting-coryphanta-cornifera">
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
-            <div><h1 class="title-species-repotting-desc" id="top">Rempotage Lithops</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mes Lithops en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
+            <div><h1 class="title-species-repotting-desc" id="top">Rempotage Coryphanta cornifera</h1>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mes Coryphanta cornifera en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
         </section>  
                 <section class="nav-button">
-                    <button class="styled-btn-index"><a href="othersucculentsindex.html#lithops">Fiche info de mes Lithops</a></button>
-                    <button class="styled-btn-gallery"><a href="othersucculentsgallery.html#lithops">Galerie photos de mes Lithops</a></button>
+                    <button class="styled-btn-index"><a href="othercactusindex.html#cornifera">Fiche info de mes Coryphanta cornifera</a></button>
+                    <button class="styled-btn-gallery"><a href="othercactusgallery.html#cornifera">Galerie photos de mes Coryphanta cornifera</a></button>
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
@@ -74,101 +74,81 @@
     </section>
     <section class="species-repotting-step">                                    <!-- AVANT REMPOTTAGE -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(1).jpg" alt="avant rempottage" title="avant rempottage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(1).jpg" alt="avant rempottage" title="avant rempottage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, ce sont mes Lithops après les avoir achetés. Ils sont bien gonflés, aucune floraison en approche ou en court donc ils vont pouvoir passer au rempotage afin d'avoir un meilleur substrat.
+                Ici, le cactus après son achat, il va fleurir et ce n'est pas conseillé de rempoter dans ce cas là mais, ce n'est pas grave je n'aime pas son pot et substrat actuel non adapté.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- SORTIS DES POTS -->
+    <section class="species-repotting-step">                                    <!-- COMPARAISON POTS -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(2).jpg" alt="sortis des pots" title="sortis des pots"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(2).jpg" alt="comparaison pots" title="comparaison pots"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-               Ici, les Lithops sont retirés de leurs pots et séparés. Avant de les placer dans le nouveau pot, je ferai délicatement tomber encore une partie du substrat se trouvant sur leurs racines. 
+                Ici, je compare le cactus dans son actuel pot face à son prochain pot.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- PRÉPARATION POT -->
+    <section class="species-repotting-step">                                    <!-- MAINTIEN POUR DÉPOTTAGE -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(3).jpg" alt="préparation pot" title="préparation pot"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(3).jpg" alt="maintien pour dépottage" title=""maintien pour dépottage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-               Ici, préparation du nouveau pot que je remplis à environ 3 cm du haut avec mon substrat mélangé précédemment. 
+                Ici, je peux aisément tenir le cactus en main car il est petit et aussi car ses épines sont dures et un peu recourbées vers l'intérieur.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- REMPLISSAGE SABLE -->
+    <section class="species-repotting-step">                                    <!-- CACTUS SORTI DU POT -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(4).jpg" alt="remplissage sable" title="remplissage sable"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(4).jpg" alt="cactus sorti du pot" title="cactus sorti du pot"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, je remplis jusqu'en haut du pot avec du sable de rivière que j'essaie de tasser correctement. J'y ferai des trous de la taille de chaque Lithops avant de les placer 1 par 1.
+                Ici, le cactus est sorti du pot très facilement et on voit qu'il a de belles racines.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- TASSEMENT SABLE -->
+    <section class="species-repotting-step">                                    <!-- COLLET CACTUS -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(5).jpg" alt="tassement sable" title="tassement sable"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(5).jpg" alt="collet du cactus" title="collet du cactus"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, avec le bout d'un marqueur je tasse délicatement le sable autour de chaque Lithops en tapotant un peu partout et en rajoutant du sable si nécessaire.
+                Ici, on voit bien le collet du cactus qui est très beau et en bonne santé.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- TASSEMENT FINI -->
+    <section class="species-repotting-step">                                    <!-- PLACEMENT CACTUS -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(6).jpg" alt="tassement fini" title="tassement fini"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(6).jpg" alt="placement du cactus" title="placement du cactus"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le sable est tassé correctement presque partout et les Lithops dépassent de la surface du sable. De cette manière, les racines iront dans le substrat et pourront y boire sans que la plante elle même ne soit dans de la terre humide.
+                Ici, je place le cactus au miieu du pot qui est déjà partiellement rempli.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- AJOUT JURA -->
+    <section class="species-repotting-step">                                    <!-- REMPLISSAGE POT -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(7).jpg" alt="ajout jura" title="ajout jura"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(7).jpg" alt="remplissage pot" title="remplissage pot"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, j'ai rajouté les graviers Jura de manière à ce que chaque Lithops tienne correctement. Le sable pas trop tassé contre les plantes se tassera naturellement sous la pluie.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- DIFFÉRENTES HAUTEURS -->
-        <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(8).jpg" alt="différentes hauteurs" title="différentes hauteurs"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, on voit que les Lithops ne sont pas tous à la même hauteur, celà est fait exprès pour donner du relief que j'aime bien.
+                Ici, je continue de tenir le cactus durant le remplissage du pot. Il ne semble pas être centré mais, ce n'est rien il le sera pendant le bon tassement su substrat et le surfaçage de graviers.
             </p>
         </div>
     </section>
     <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(9).jpg" alt="rempottage fini" title="rempottage fini"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(8).jpg" alt="rempottage fini" title="rempottage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le rempottage est fini et ils partent dans un prochain bac avant de vivre dehors.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- DANS AUTRE BAC -->
-        <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/lithops(10).jpg" alt="dans autre bac" title="dans autre bac"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, j'ai placé le pot dans un bac en terre-cuite carré lui-même troué et rempli de sable ainsi, il absorbera la chaleur du soleil et l'épaisseur de sable empêchera que le bac des Lithops ne soit trop chaud et les plantes garderont les pieds au frais.
+                Maintenant que les graviers de Jura mit sur un substrat correctement tassé, le cactus peut aller vivre dehors tranquillement.
             </p>
         </div>
     </section>
